@@ -11,6 +11,9 @@
  * Fix passing ssh_command, password, and key_filename parameters to the SSH
    vendor. Regression from 0.24.2.  (Jelmer Vernooĳ, #1945)
 
+ * Fix LFS URL validation to prevent DNS resolution errors when ``lfs.url`` is
+   configured with an invalid value. (Jelmer Vernooĳ, #1951)
+
 0.24.6	2025-10-19
 
  * Fix import failure when ``sys.stdin`` is ``None``. The ``dulwich.server``
